--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 	<link rel='stylesheet' href='css/media.css' type='text/css'>
 
-	<script type="text/javascript" src="code.js"></script>
+	<script src="code.js"></script>
 
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 	
@@ -28,7 +28,7 @@
 						<a href="mailto:info@consultplus.com" class="email">info@consultplus.com</a>
 					</div>
 					<div class="col col-lg-2" >phone:
-						<a href="tel:+ 9156856664555" class="tel">+ 91 5685 6664 555</a>
+						<a href="tel:+9156856664555" class="tel">+ 91 5685 6664 555</a>
 					</div>
 				</div> 
 			</div>
@@ -37,7 +37,7 @@
 			<div class="container">
 				<nav class="navbar navbar-expand-lg navbar-light bg-white " >
 					<div class="navbar-brand ">
-						<img src="images/logo.png">
+						<img src="images/logo.png" alt="logo">
 					</div> 
 					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarMenu" aria-controls="navbarMenu" aria-expanded="true" aria-label="Toggle navigation">
 	    				<span class="navbar-toggler-icon"></span>
@@ -107,7 +107,7 @@
 							<div class="d-flex flex-row flex-wrap align-content-stretch border-right align-items-stretch w-50" >
 								<div class="border-bottom w-100 px-1 px-sm-4 px-md-2 px-lg-4 my-0 card__item">
 									<div>
-								    	<img src="images/icon_education.png">
+								    	<img src="images/icon_education.png" alt="educ">
 								    	<div class="d-flex flex-lg-row justify-content-between">
 									    	<h5 class="text-uppercase">education</h5>
 									    	<a href="#" class="">
@@ -118,7 +118,7 @@
 								</div>   
 							    <div class=" border-bottom w-100 px-1 px-sm-4 px-md-2 px-lg-4 my-0 card__item ">
 							    	<div>
-								    	<img src="images/icon_technology.png" >
+								    	<img src="images/icon_technology.png" alt="technology">
 								    	<div class="d-flex flex-lg-row justify-content-between">
 								    		<h5 class="text-uppercase">technology</h5>
 								    		<a href="#">
@@ -129,7 +129,7 @@
 							    </div>
 							    <div class="w-100 px-1 px-sm-4 px-md-2 px-lg-4 my-0 card__item">
 							    	<div>
-								    	<img src="images/icon_banking.png" >
+								    	<img src="images/icon_banking.png" alt="banking">
 								    	<div class="d-flex flex-lg-row justify-content-between">
 									    	<h5 class="text-uppercase">banking</h5>
 									    	<a href="#">
@@ -142,7 +142,7 @@
 							<div class="d-flex flex-row flex-wrap w-50 ">
 								<div class="border-bottom w-100 px-1 px-sm-4 px-md-2 px-lg-4 card__item">
 									<div>
-								    	<img src="images/icon_business.png">
+								    	<img src="images/icon_business.png" alt="business">
 								    	<div class="d-flex flex-lg-row justify-content-between">
 								    		<h5 class="text-uppercase">business</h5>
 								    		<a href="#">
@@ -153,7 +153,7 @@
 								</div>   
 							    <div class="border-bottom w-100 px-1 px-sm-4 px-md-2 px-lg-4 card__item">
 							    	<div>
-								    	<img src="images/icon_real_estate.png" >
+								    	<img src="images/icon_real_estate.png" alt="realestate">
 								    	<div class="d-flex flex-lg-row justify-content-between">
 									    	<h5 class="text-uppercase">real estate</h5>
 									    	<a href="#">
@@ -183,7 +183,7 @@
 					<a href="#" role="button" class="btn text-uppercase">read more</a>
 				</div>
 				<div class="col-md-5 badge d-none d-sm-block">
-					<img src="images/about_us.png" class="img-fluid">
+					<img src="images/about_us.png" class="img-fluid" alt="about">
 					<div class="medal p-0">
 						<div>
 							<div></div>
@@ -205,19 +205,19 @@
 								<h3 class="headline text-uppercase"><small>our</small><br>steps</h3>
 								<div class="row">
 									<div class="col-12 col-md d-flex flex-column align-items-md-start align-items-center">
-										<img src="images/icon_choose_industry.png" class="mb-auto">
+										<img src="images/icon_choose_industry.png" class="mb-auto" alt="icon">
 										<p>01</p>
 										<h4 class="steps__headline text-uppercase">choose your industry</h4>
 										<p class="domine">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry</p>
 									</div>
 									<div class="col-12 col-md d-flex flex-column align-items-md-start align-items-center">			
-										<img src="images/icon_choose_service.png" class="mb-auto">
+										<img src="images/icon_choose_service.png" class="mb-auto" alt="icon">
 										<p>02</p>
 										<h4 class="steps__headline text-uppercase">choose your service</h4>
 										<p class="domine">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry</p>
 									</div>
 									<div class="col-12 col-md d-flex flex-column align-items-md-start align-items-center">
-										<img src="images/icon_boost_business.png" class="mb-auto">
+										<img src="images/icon_boost_business.png" class="mb-auto" alt="icon">
 										<p>03</p>
 										<h4 class="steps__headline text-uppercase">boost your business</h4>
 										<p class="domine">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry</p>
@@ -241,7 +241,7 @@
 					<div class="d-flex justify-content-center" >
 						<div class="position-relative ">
 							<a href="#" class="">
-								<img src="images/project_banking.png" class="img-fluid projects__img_1 ">	
+								<img src="images/project_banking.png" class="img-fluid projects__img_1 " alt="img1">	
 							</a>	
 							<div class="position-absolute text-uppercase text-center img__text">banking</div>
 							<div class="projects__marker position-absolute "></div>	
@@ -256,7 +256,7 @@
 						<div class="col-6 ">
 							<div class="position-relative">
 								<a href="#" class="">						
-									<img src="images/project_2.png" class="img-fluid projects__img">
+									<img src="images/project_2.png" class="img-fluid projects__img" alt="img2">
 								</a>	
 								<div class="projects__marker position-absolute "></div>
 								<div class="position-absolute"></div>
@@ -271,7 +271,7 @@
 						<div class="col-6 text-right">
 							<div class="position-relative">
 								<a href="#" class="">
-									<img src="images/project_technology.png" class="img-fluid projects__img" >
+									<img src="images/project_technology.png" class="img-fluid projects__img" alt="img3">
 								</a>
 								<div class="position-absolute text-uppercase text-center img__text">tecnology</div>
 								<div class="projects__marker position-absolute "></div>
@@ -284,7 +284,7 @@
 						<div class="col-12 text-center ">
 							<div class="col-auto  p-0">
 								<a href="#" class=" ">
-									<img src="images/project_real_estate.png" class="img-fluid projects__img"> 
+									<img src="images/project_real_estate.png" class="img-fluid projects__img" alt="img4"> 
 								</a>
 								<div class="position-absolute text-uppercase text-center img__text">real estate</div>
 								<div class="projects__marker position-absolute "></div>
@@ -318,7 +318,7 @@
 								<input type="radio" name="point" id="slide1" class="d-none" checked >
 								<div class="d-flex flex-column align-items-center flex-lg-row">
 									<label for="slide1" >
-										<img src="images/client_1.png" class=" rounded-circle">
+										<img src="images/client_1.png" class=" rounded-circle" alt="photo">
 									</label>	
 									<div class="ml-4 d-flex flex-column justify-content-center">
 										<h3 class="text-uppercase">client name</h3>
@@ -341,7 +341,7 @@
 								<input type="radio" name="point" id="slide2" class="d-none">
 								<div class="d-flex flex-column align-items-center flex-lg-row">
 									<label for="slide2">
-										<img src="images/client_2.png" class=" rounded-circle">
+										<img src="images/client_2.png" class=" rounded-circle" alt="photo">
 									</label>	
 									<div class="ml-4 d-flex flex-column justify-content-center">
 										<h3 class="text-uppercase">client name</h3>
@@ -364,7 +364,7 @@
 								<input type="radio" name="point" id="slide3" class="d-none">
 								<div class="d-flex flex-column align-items-center flex-lg-row">
 									<label for="slide3" >
-										<img src="images/client_3.png" class=" rounded-circle">
+										<img src="images/client_3.png" class=" rounded-circle" alt="photo">
 									</label>	
 									<div class="ml-4 d-flex flex-column justify-content-center">
 										<h3 class="text-uppercase">client name</h3>
@@ -415,27 +415,27 @@
 							<div>
 								<p class="domine mt-4">February <span>20, 2016</span></p>
 								<button class="blog__btn">
-									<h3 class="text-uppercase blog__heading">blog heading here business</h3>
+									<p class="text-uppercase blog__heading">blog heading here business</p>
 								</button>
 								<p class="domine text-muted d-block blog__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
 							</div>
 							<div>
 								<p class="domine mt-4">February <span>22, 2016</span></p>
 								<button class="blog__btn">
-									<h3 class="text-uppercase blog__heading">many variation of passages of ipsum</h3>
+									<p class="text-uppercase blog__heading">many variation of passages of ipsum</p>
 								</button>
 								<p class="domine text-muted blog__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
 							</div>
 							<div>
 								<p class="domine mt-4">February <span>22, 2016</span></p>
 								<button class="blog__btn">
-									<h3 class="text-uppercase blog__heading">internet tend to repeat predefined</h3>
+									<p class="text-uppercase blog__heading">internet tend to repeat predefined</p>
 								</button>
 								<p class="domine text-muted blog__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
 							</div>
 						</div>
 						<div class="col-12 col-lg-6" class="position-relative">
-							<img src="images/blog.png" class="d-none d-lg-block position-absolute h-100" > 
+							<img src="images/blog.png" class="d-none d-lg-block position-absolute h-100" alt="blog=img"> 
 						</div>
 					</div>		
 				</div> <!--container--> 
