--- a/index.html
+++ b/index.html
@@ -414,28 +414,22 @@
 							</div>
 							<div>
 								<p class="domine mt-4">February <span>20, 2016</span></p>
-								<button class="blog__btn">
-									<p class="text-uppercase blog__heading">blog heading here business</p>
-								</button>
+								<button class="blog__btn text-uppercase blog__heading">blog heading here business</button>
 								<p class="domine text-muted d-block blog__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
 							</div>
 							<div>
 								<p class="domine mt-4">February <span>22, 2016</span></p>
-								<button class="blog__btn">
-									<p class="text-uppercase blog__heading">many variation of passages of ipsum</p>
-								</button>
+								<button class="blog__btn text-uppercase blog__heading">many variation of passages of ipsum</button>
 								<p class="domine text-muted blog__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
 							</div>
 							<div>
 								<p class="domine mt-4">February <span>22, 2016</span></p>
-								<button class="blog__btn">
-									<p class="text-uppercase blog__heading">internet tend to repeat predefined</p>
-								</button>
+								<button class="blog__btn text-uppercase blog__heading">internet tend to repeat predefined</button>
 								<p class="domine text-muted blog__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
 							</div>
 						</div>
-						<div class="col-12 col-lg-6" class="position-relative">
-							<img src="images/blog.png" class="d-none d-lg-block position-absolute h-100" alt="blog=img"> 
+						<div class="col-12 col-lg-6 position-relative">
+							<img src="images/blog.png" class="d-none d-lg-block position-absolute h-100" alt="blog-img"> 
 						</div>
 					</div>		
 				</div> <!--container--> 
