input in footer form & icons in testimonials fixed

--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@
 			</div>
 		</div> <!--container-->
 		<!--section about us-->
-		<div class="container section about_us" id="about">
-			<div class="row ">
+		<div class="container-fluid section about_us" id="about">
+			<div class="row m-0">
 				<div class="col-md-7 text-muted text-right">
 					<h3 class="headline text-uppercase"><small>what we are</small><br>about us</h3>
 					<p class="domine">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled
@@ -198,7 +198,7 @@
 		<!--section steps-->
 		<div class="steps">
 			<div class="container-fluid section">
-				<div class="row">
+				<div class="row m-0">
 					<div class="container">
 						<div class="row">
 							<div class="col">
@@ -231,12 +231,12 @@
 		</div><!--section steps-->
 		<!--section projects-->		
 		<div class="container section projects">
-			<div class="row">
+			<div class="row m-0">
 				<div class="col-12">
 					<h3 class="headline text-uppercase"><small>featured</small><br>projects</h3>
 				</div>	
 			</div><!--row-->
-			<div class="row"> 
+			<div class="row m-0"> 
 				<div class="col-12 col-lg-6 mb-3 mb-lg-0" >
 					<div class="d-flex justify-content-center" >
 						<div class="position-relative ">
@@ -297,7 +297,7 @@
 					</div>
 				</div>
 			</div> <!--row-->		
-			<div class="row">
+			<div class="row m-0">
 				<div class="col-auto mx-auto pt-5 mt-5 ">
 					<a href="#" role="button" class="btn projects__btn text-uppercase">full projects</a>	
 				</div>	
@@ -305,7 +305,7 @@
 		</div><!--section projects-->	
 		<!--section testimomials-->	
 		<div class="container-fluid testimonials section">
-			<div class="row">
+			<div class="row m-0">
 				<div class="container">
 					<div class="row">
 						<div class="col-md-12">
@@ -313,7 +313,7 @@
 						</div>
 					</div> <!--row-->
 					<div class="row">
-						<div class="col-12 slider d-flex flex-nowrap">
+						<div class="col-12 slider d-flex flex-nowrap justify-content-between">
 							<div class="w-25 d-inline-block m-0">
 								<input type="radio" name="point" id="slide1" class="d-none" checked >
 								<div class="d-flex flex-column align-items-center flex-lg-row">
@@ -327,13 +327,13 @@
 								</div>
 								<div class="slider__item d-flex flex-nowrap">
 									<div class="col-1 d-none d-lg-block">
-										<object data="images/icon_quote2.svg" type="image/svg+xml"></object>
+										<object class="w-100" data="images/icon_quote2.svg" type="image/svg+xml"></object>
 									</div>
-									<div class="col-10">
+									<div class="col-12 col-lg-10">
 										<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially</p>
 									</div>
 									<div class="col-1 d-none d-lg-block">
-										<object data="images/icon_quote1.svg" type="image/svg+xml"></object>
+										<object class="w-100" data="images/icon_quote1.svg" type="image/svg+xml"></object>
 									</div>
 								</div><!--slider__item-->
 							</div> 
@@ -350,13 +350,13 @@
 								</div>
 								<div class="slider__item d-flex flex-nowrap">
 									<div class="col-1 d-none d-lg-block">
-										<object data="images/icon_quote2.svg" type="image/svg+xml"></object>
+										<object class="w-100" data="images/icon_quote2.svg" type="image/svg+xml"></object>
 									</div>
 									<div class="col-12 col-lg-10">
 										<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially</p>
 									</div>
 									<div class="col-1 d-none d-lg-block">
-										<object data="images/icon_quote1.svg" type="image/svg+xml"></object>
+										<object class="w-100" data="images/icon_quote1.svg" type="image/svg+xml"></object>
 									</div>
 								</div> <!--slider__item-->
 							</div> 
@@ -373,13 +373,13 @@
 								</div>
 								<div class="slider__item d-flex flex-nowrap">
 									<div class="col-1 d-none d-lg-block">
-										<object data="images/icon_quote2.svg" type="image/svg+xml"></object>
+										<object class="w-100" data="images/icon_quote2.svg" type="image/svg+xml"></object>
 									</div>
-									<div class="col-10">
+									<div class="col-12 col-lg-10">
 										<p >Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially</p>
 									</div>
 									<div class="col-1 d-none d-lg-block">
-										<object data="images/icon_quote1.svg" type="image/svg+xml"></object>
+										<object class="w-100" data="images/icon_quote1.svg" type="image/svg+xml"></object>
 									</div>
 								</div> <!--slider__item-->
 							</div> 
@@ -401,7 +401,7 @@
 			<div class="row" >
 				<div class="container">
 					<div class="row " >
-						<div class="col-12 col-lg-6 pr-5 section"> 
+						<div class="col-12 col-lg-6 pr-0 pr-lg-5 section"> 
 							<div class="d-flex flex-column align-items-start flex-sm-row justify-content-sm-between align-items-sm-center flex-lg-column align-items-lg-start flex-xl-row justify-content-xl-between align-items-xl-center">
 								<h3 class="headline text-uppercase">
 									<small>news</small><br>
@@ -437,12 +437,12 @@
 		</div>
 			<!--contact us-->
 		<div class="container section" id="contact">
-			<div class="row">
+			<div class="row m-0">
 				<div class="col-12  ">
 					<h3 class="headline text-uppercase"><small>for consulting</small><br>contact us</h3>
 				</div>
 			</div>	
-			<div class="row d-flex flex-md-nowrap justify-content-between">
+			<div class="row d-flex flex-md-nowrap justify-content-between m-0">
 				<div class="col-12 col-md-4 contact ">
 					<div class="d-flex flex-md-column flex-lg-row justify-content-around align-items-center">
 						<object data="images/icon_email.svg" type="image/svg+xml" ></object>
@@ -471,12 +471,12 @@
 					<div class="container">
 						<div class="row">
 							<div class="col section">
-								<div class="row">
+								<div class="row m-0">
 									<div class="col-12 col-lg-6 ">
 										<h3 class="headline footer__headline text-uppercase ">news letter</h3>
 										<p class="domine footer__text">Enter your enail address to subscribe our notification<br>of our new post & features by enail</p>
 										<form class="form-inline d-flex flex-nowrap justify-content-between footer__form">
-											<input type="email" name="email" class="form-control text-uppercase" placeholder="email address">
+											<input type="email" name="email" class="form-control text-uppercase w-100 h-100" placeholder="email address">
 											<button type="submit" class="btn footer__btn text-uppercase">subscribe</button>
 										</form> 
 									</div>
