changes for gallery in projects section

--- a/index.html
+++ b/index.html
@@ -238,10 +238,10 @@
 			</div><!--row-->
 			<div class="row m-0"> 
 				<div class="col-12 col-lg-6 mb-3 mb-lg-0" >
-					<div class="d-flex justify-content-center" >
-						<div class="position-relative ">
-							<a href="#" class="">
-								<img src="images/project_banking.png" class="img-fluid projects__img_1 " alt="img1">	
+					<div class="d-flex justify-content-center h-100" >
+						<div class="position-relative w-100">
+							<a href="#" class="w-100 d-block h-100">
+								<img src="images/project_banking.png" class="img-fluid projects__img_1 w-100" alt="img1">	
 							</a>	
 							<div class="position-absolute text-uppercase text-center img__text">banking</div>
 							<div class="projects__marker position-absolute "></div>	
@@ -251,49 +251,39 @@
 						</div>		
 					</div>	
 				</div>	
-				<div class="col-12 col-lg-6">
-					<div class=" row projects__img_row1">
-						<div class="col-6 ">
-							<div class="position-relative">
-								<a href="#" class="">						
-									<img src="images/project_2.png" class="img-fluid projects__img" alt="img2">
-								</a>	
-								<div class="projects__marker position-absolute "></div>
-								<div class="position-absolute"></div>
-								<div class="projects__active position-absolute text-center d-flex align-items-center">
-									<div >
-										<p class="headline text-uppercase ">project heading</p>
-										<p class="domine">Lorem Ipsum is simply dummy text of the printing and...</p> 
-									</div>
+				<div class="col-12 col-lg-6 d-flex flex-column">
+					<div class="flex-grow-1 h-50 w-100 d-flex projects__gallery">
+						<a href="#" class="d-block position-relative projects__link-left">						
+							<img src="images/project_2.png" class="img-fluid projects__img h-100" alt="img2">
+							<div class="projects__marker position-absolute "></div>		
+							<div class="position-absolute"></div>
+							<div class="projects__active position-absolute text-center d-flex align-items-center">
+								<div >
+									<p class="headline text-uppercase ">project heading</p>
+									<p class="domine">Lorem Ipsum is simply dummy text of the printing and...</p> 
 								</div>
-							</div>							
-						</div>
-						<div class="col-6 text-right">
-							<div class="position-relative">
-								<a href="#" class="">
-									<img src="images/project_technology.png" class="img-fluid projects__img" alt="img3">
-								</a>
-								<div class="position-absolute text-uppercase text-center img__text">tecnology</div>
-								<div class="projects__marker position-absolute "></div>
-								<div class="position-absolute"></div>
-								<div class="projects__active w-100 h-100 position-absolute"></div>
-							</div>
-						</div>
+							</div>		
+						</a>	
+										
+						<a href="#" class="d-block projects__link-right position-relative">
+							<img src="images/project_technology.png" class="img-fluid projects__img h-100" alt="img3">
+							<div class="position-absolute text-uppercase text-center img__text">tecnology</div>
+							<div class="projects__marker position-absolute "></div>
+							<div class="position-absolute"></div>
+							<div class="projects__active w-100 h-100 position-absolute"></div>
+						</a>
+
 					</div>
-					<div class="row projects__img_row2 position-relative">
-						<div class="col-12 text-center ">
-							<div class="col-auto  p-0">
-								<a href="#" class=" ">
-									<img src="images/project_real_estate.png" class="img-fluid projects__img" alt="img4"> 
-								</a>
-								<div class="position-absolute text-uppercase text-center img__text">real estate</div>
-								<div class="projects__marker position-absolute "></div>
-								<div class="position-absolute"></div>
-								<div class="projects__active h-100 position-absolute">
-									<p></p>
-								</div>
+					<div class="flex-grow-1 h-50 w-100">					
+						<a href="#" class="d-block h-100 position-relative">
+							<img src="images/project_real_estate.png" class="h-100 img-fluid projects__img" alt="img4"> 
+							<div class="position-absolute text-uppercase text-center img__text">real estate</div>
+							<div class="projects__marker position-absolute "></div>
+							<div class="position-absolute"></div>
+							<div class="projects__active h-100 position-absolute">
+								<p></p>
 							</div>
-						</div>
+						</a>
 					</div>
 				</div>
 			</div> <!--row-->		
